@@ -534,9 +534,19 @@ function jumpstart_ag_header_class( $class ) {
 
 	// Background brightness
 	if ( themeblvd_config('suck_up') ) {
+
 		$class[] = 'trans-' . themeblvd_get_option('header_trans_bg_color_brightness');
+
+		if ( themeblvd_get_option('header_trans_hide_border') ) {
+			$class[] = 'no-border';
+		} else {
+			$class[] = 'has-border';
+		}
+
 	} else {
+
 		$class[] = themeblvd_get_option('header_bg_color_brightness');
+
 	}
 
 	$class[] = 'mobile-' . themeblvd_get_option('header_mobile_bg_color_brightness');
